# text-to-sql

./: .gitignore  README.md  main.py  pyproject.toml
src/text_to_sql_agent/: agent.py  agent_factory.py  app_visual.py  config.py  db.py  execution_graph.py  graph_build.py  graph_nodes.py  graph_policy.py  graph_state.py  runtime_bootstrap.py  schema_analysis.py  sql_tools.py  state_initializer.py
src/text_to_sql_agent/errors/: error_formatter.py
src/text_to_sql_agent/grounding/: grounding_router.py  grouping.py  intent_rules.py  query_enricher.py
src/text_to_sql_agent/llm_tools/: hitl_tools.py  llm_tools.py  post_execution_tools.py  query_repair_tools.py
src/text_to_sql_agent/prompts/: prompts.md
src/text_to_sql_agent/result_processing/: csv_exporter.py  output_classifier.py  table_formatter.py  visualization_hints.py
src/text_to_sql_agent/retry/: error_classifier.py  error_types.py
src/text_to_sql_agent/runtime/: execution_guard.py
src/text_to_sql_agent/sql_tools/: normalization.py  sql_parsing.py  sql_static_checks.py  sql_tools.py
src/text_to_sql_agent/sql_validation/: join_validator.py
src/text_to_sql_agent/tools/: __init__.py  hitl_tools.py  post_execution_tools.py  query_repair_tools.py  schema_tools.py  tool_executor.py
src/text_to_sql_agent/utils/: load_markdown.py  prompts.md
